force-app/main/default/objects/Issue__c/Issue__c.object-meta.xml
<CustomObject>
    <description>Object to store issues (bigs, errors, feature requests) by users on the platform.</description>
    <label>Issue</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>