force-app/main/default/objects/Issue__c/fields/Actual_Result__c.field-meta.xml
<CustomField>
    <fullName>Actual_Result__c</fullName>
    <description>What is the actual result that caused this issue request?</description>
    <inlineHelpText>What is the actual result that caused this issue request?</inlineHelpText>
    <label>Actual Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>