force-app/main/default/objects/Issue__c/fields/Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reporter can specify whether to receive email when issue is reported or status is updated</description>
    <inlineHelpText>Reporter can specify whether to receive email when issue is reported or status is updated</inlineHelpText>
    <label>Email Notification</label>
    <type>Checkbox</type>
</CustomField>