force-app/main/default/objects/Issue__c/fields/Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>Expected_Result__c</fullName>
    <description>What was the outcome that you expected? Or expect if a feature request?</description>
    <inlineHelpText>What was the outcome that you expected? Or expect if a feature request?</inlineHelpText>
    <label>Expected Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>