force-app/main/default/objects/Issue__c/fields/Reported_Object__c.field-meta.xml
<CustomField>
    <fullName>Reported_Object__c</fullName>
    <description>Which object is this issue related to?</description>
    <inlineHelpText>Which object is this issue related to?</inlineHelpText>
    <label>Reported Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>