force-app/main/default/objects/Issue__c/fields/Reported_Record__c.field-meta.xml
<CustomField>
    <fullName>Reported_Record__c</fullName>
    <description>What record is this issue related to?</description>
    <inlineHelpText>What record is this issue related to?</inlineHelpText>
    <label>Reported Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>