force-app/main/default/objects/Issue__c/fields/Repro_Steps__c.field-meta.xml
<CustomField>
    <fullName>Repro_Steps__c</fullName>
    <description>Steps for admin to reproduce the issue</description>
    <inlineHelpText>Steps for admin to reproduce the issue</inlineHelpText>
    <label>Repro Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>