force-app/main/default/objects/Issue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>(&quot;New&quot;)</defaultValue>
    <description>What is the status of this issue?</description>
    <inlineHelpText>What is the status of this issue?</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
                <default>true</default>
                <label>Closed</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>