force-app/main/default/objects/Issue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>What is the type of this issue?</description>
    <inlineHelpText>What is the type of this issue?</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
                <default>true</default>
                <label>Bug</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>