force-app/main/default/objects/Issue__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Page URL where error was reported</description>
    <inlineHelpText>Page URL where error was reported</inlineHelpText>
    <label>URL</label>
    <type>TextArea</type>
</CustomField>