force-app/main/default/objects/Issue__c/fields/URL_Display__c.field-meta.xml
<CustomField>
    <fullName>URL_Display__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(HYPERLINK( URL__c , URL__c),&#39;http://&#39;, &#39;/&#39;), &#39;https://&#39;, &#39;/&#39;)</formula>
    <label>URL Display</label>
    <type>Text</type>
</CustomField>