force-app/main/default/objects/Issue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Details__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Reported_Record__c</columns>
    <columns>Reported_Object__c</columns>
    <columns>Priority__c</columns>
    <columns>URL_Display__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>